[gd_scene load_steps=2 format=3 uid="uid://unique_snake_app_scene_id"]

[ext_resource type="Script" path="res://scenes/ui/phone/apps/SnakeApp.gd" id="1_snake_app_gd"]

[node name="SnakeApp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_snake_app_gd")

[node name="StartScreen" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0  # Adjusted for content width
offset_top = -50.0   # Adjusted for content height
offset_right = 75.0
offset_bottom = 50.0
theme_override_constants/separation = 10 # Spacing between title and button

    [node name="TitleLabel" type="Label" parent="StartScreen"]
    layout_mode = 2
    text = "Snake Game"
    horizontal_alignment = 1 # Center

    [node name="StartButton" type="Button" parent="StartScreen"]
    layout_mode = 2
    text = "Start Game"

[node name="GameArea" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0 # for 300 width
offset_top = -200.0  # for 400 height
offset_right = 150.0
offset_bottom = 200.0
color = Color(0.2, 0.2, 0.2, 1)
visible = false # Initially hidden

[node name="GameOverScreen" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0  # Adjusted for content width
offset_top = -70.0   # Adjusted for content height
offset_right = 80.0
offset_bottom = 70.0
visible = false # Initially hidden
theme_override_constants/separation = 10 # Spacing between elements

    [node name="GameOverLabel" type="Label" parent="GameOverScreen"]
    layout_mode = 2
    text = "Game Over!"
    horizontal_alignment = 1 # Center

    [node name="ScoreLabel" type="Label" parent="GameOverScreen"]
    layout_mode = 2
    text = "Score: 0"
    horizontal_alignment = 1 # Center

    [node name="PlayAgainButton" type="Button" parent="GameOverScreen"]
    layout_mode = 2
    text = "Play Again"
